# pirakansa.github.io

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  index.html  vorbere.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml
assets/: featured.yaml  manifest.json  portfolio.yaml  sw.js
src/: main.rs
src/app/: data.rs  fonts.rs  layout.rs  mod.rs  theme.rs
src/app/components/: carousel.rs  featured.rs  footer.rs  mod.rs  navigation.rs  repo_card.rs  settings_menu.rs  tag_chip.rs
